--- a/DASAFIO02/index.html
+++ b/DASAFIO02/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
   <title>Imagens</title>
-</head>
-<body>
+</head >
+<body style="text-align: center;">
     <h1>Desafio das Imagens</h1>
     <p>Inserir imagens em HTML é muito simples, tanto no conteúdo quanto lá<br>em cima. Como ícone favoritos!</p>
     <img src="image/smile.png" alt="imgSmile">
