--- a/DASAFIO03/index.html
+++ b/DASAFIO03/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mapa Mundi</title>
 </head>
-<body>
+<body style="text-align: center;">
     <h1>Desafio do Mapa</h1>
     <hr>
     <p>Agora chegou a hora de treinar um pouco o uso de imagens, parágrafos e<br>quebras de linhas.</p>
