--- a/DASAFIO09/index.html
+++ b/DASAFIO09/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meus vídeos</title>
 </head>
-<body style="background-color:rgb(65, 63, 63);">
+<body style="background-color:rgb(65, 63, 63); text-align: center;">
     <h1> Vídeos legais para assistir</h1>
     <a href="pagHTML.html"><img src="image/thumb-html.png" width="250" height="150" alt="img/html"></a>
     <a href="pagJS.html"><img src="image/thumb-js.png" width="250" height="150" alt="img/js"></a><br>
