--- a/DASAFIO09/pagHTML.html
+++ b/DASAFIO09/pagHTML.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML</title>
 </head>
-<body style="background-color:rgb(65, 63, 63);">
+<body style="background-color:rgb(65, 63, 63); text-align: center;"">
     <h1>Curso de HTML</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/epDCjksKMok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
