--- a/EX0014-CSS/index.html
+++ b/EX0014-CSS/index.html
@@ -4,17 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estilos Inline</title>
+  <title>Estilos Locais / Internos</title>
+  <style>
+      body {
+          background-color: cadetblue;
+          font-family:Arial, Helvetica, sans-serif;
+          font-size: 20px;
+      }
+
+      h1 {
+          color: chartreuse;
+          background-color: rgb(212, 76, 76);
+      }
+
+      h2 {
+          color: coral;
+      }
+
+      p {
+          text-align: justify;
+      }
+  </style>
 </head>
-  <!-- NÃO RECOMENDÁVEL / POLUI O AMBIENTE / TRABALHOSO / DIFICULTA MANUTENÇÃO -->
-<body style="background-color: aquamarine; font-family: Arial, Helvetica, sans-serif;">
-    <h1 style="color: blueviolet;">Capitulo 1</h1>
-    <h2 style="color: crimson;">Capitulo 1.1</h2>
-    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aliquam eos laborum, ad commodi ullam incidunt molestias, totam unde, laudantium ipsum suscipit. Iste ratione consequuntur est illum! Voluptatum, sint recusandae!</p>
-    <h2 style="color: crimson;">Capitulo 1.2</h2>
-    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque atque reiciendis aspernatur sequi porro odit esse officia voluptatibus magnam dignissimos provident, accusamus perferendis assumenda explicabo consequuntur. Fuga iure ratione quia?</p>
-    <h1 style="color: blueviolet;">Capitulo 2</h1>
-    <h2 style="color: crimson;">Capitulo 2.1</h2>
-    <p style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi, facere atque quae, consectetur modi rem, repellendus cum adipisci quasi quas voluptas natus amet neque ex consequatur quibusdam enim delectus!</p>
+<body>
+    <h1>Capitulo 1</h1>
+    <h2>Capitulo 1.1</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus aliquam eos laborum, ad commodi ullam incidunt molestias, totam unde, laudantium ipsum suscipit. Iste ratione consequuntur est illum! Voluptatum, sint recusandae!</p>
+    <h2>Capitulo 1.2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque atque reiciendis aspernatur sequi porro odit esse officia voluptatibus magnam dignissimos provident, accusamus perferendis assumenda explicabo consequuntur. Fuga iure ratione quia?</p>
+    <h1>Capitulo 2</h1>
+    <h2>Capitulo 2.1</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi, facere atque quae, consectetur modi rem, repellendus cum adipisci quasi quas voluptas natus amet neque ex consequatur quibusdam enim delectus!</p>
 </body>
 </html>
