--- a/EX0015-CSS/index.html
+++ b/EX0015-CSS/index.html
@@ -4,27 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Estilos Locais / Internos</title>
-  <style>
-      body {
-          background-color: cadetblue;
-          font-family:Arial, Helvetica, sans-serif;
-          font-size: 20px;
-      }
-
-      h1 {
-          color: chartreuse;
-          background-color: rgb(212, 76, 76);
-      }
-
-      h2 {
-          color: coral;
-      }
-
-      p {
-          text-align: justify;
-      }
-  </style>
+  <title>Estilos Externos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Capitulo 1</h1>
@@ -35,5 +16,6 @@
     <h1>Capitulo 2</h1>
     <h2>Capitulo 2.1</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit eligendi, facere atque quae, consectetur modi rem, repellendus cum adipisci quasi quas voluptas natus amet neque ex consequatur quibusdam enim delectus!</p>
+    <p><a href="pagina02.html">Ir para a página 2</a></p>
 </body>
 </html>
