--- a/MODULO02/EX016/cor01.html
+++ b/MODULO02/EX016/cor01.html
@@ -27,5 +27,7 @@
 
     <h2 style="background-color: rgba(61, 61, 240, 0.322); color: rgb(184, 233, 94);">Exemplo de Cores</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus soluta ratione asperiores est dolor ut, voluptate non dignissimos quaerat aspernatur animi consectetur nulla dolore repellendus excepturi pariatur cupiditate. Necessitatibus, accusamus!</p>
+
+    <h2 style="color: rgb(0, 2, 100);"><a href="cor02.html" target="_blank">Clique aqui para o proximo Exemplo</a></h2>
 </body>
 </html>
