--- a/MODULO02/EX019/seletor01.html
+++ b/MODULO02/EX019/seletor01.html
@@ -10,18 +10,18 @@
 <body>
     <h1 id="principal">Criando Sites com HTML e CSS</h1>
     <h1>Aprendendo HTML</h1>
-    <h2>HTML básico</h2>
+    <h2 class="basico">HTML básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium laboriosam laborum, perspiciatis omnis.</p>
-    <h2>HTML intermediário</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium laboriosam laborum, perspiciatis omnis.</p>
-    <h2>HTML avançado</h2>
+    <h2 class="intermediario">HTML intermediário</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium <span class="destaque">laboriosam laborum</span>, perspiciatis omnis.</p>
+    <h2 class="avançado destaque">HTML avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium laboriosam laborum, perspiciatis omnis.</p>
     <h1>Aprendendo CSS</h1>
-    <h2>CSS básico</h2>
+    <h2 class="basico">CSS básico</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium laboriosam laborum, perspiciatis omnis.</p>
-    <h2>CSS intermediário</h2>
+    <h2 class="intermediario">CSS intermediário</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium laboriosam laborum, perspiciatis omnis.</p>
-    <h2>CSS avançado</h2>
+    <h2 class="avançado">CSS avançado</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate perspiciatis voluptatem quasi veritatis. Consequatur odit, recusandae quaerat rem nobis nostrum est fugiat earum nam repellat praesentium laboriosam laborum, perspiciatis omnis.</p>
 </body>
 </html>
