Meu site sombras e bordas

--- a/MODULO02/EX021/caixa02.html
+++ b/MODULO02/EX021/caixa02.html
@@ -16,12 +16,14 @@
         padding: 10px;
         border-radius: 10px;
         margin: 10px;
+        box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
     }
       nav {
         background-color: rgba(218, 215, 213, 0.425);
         border-radius: 5px;
         padding: 5px;
         margin: 5px;
+        box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
       }
       nav > a {
         text-decoration: none;
@@ -39,16 +41,19 @@
         padding: 10px;
         border-radius: 10px;
         margin: 10px;
+        box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
       }
       article {
         background-color: rgba(218, 215, 213, 0.425);
         border-radius: 5px;
         padding: 5px;
         margin: 5px;
+        box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.5);
       }
       article > aside {
         background-color: rgba(218, 215, 213, 0.705);
         border-radius: 5px;
+        
       }
       article > p {
         text-align: justify;
@@ -57,7 +62,11 @@
         background-color:  darkslategrey;
         text-align: center;
         color: white;
-        padding: 1px;
+        padding: 4px;
+        margin: 0px;
+        
+      }
+      footer > p {
         margin: 0px;
       }
   </style>
