--- a/MODULO02/DESAFIO/index.html
+++ b/MODULO02/DESAFIO/index.html
@@ -45,10 +45,10 @@
         <section id="video">
               <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0"   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-        <section>
+        <section id="extra">
             <h3>Quer aprender mais?</h3>
               <p>Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.</p>
-            <ol>
+            <ul>
                 <li>1.5 - Cupcake</li>
                 <li>1.6 - Donut</li>
                 <li>3.0 - Eclair</li>
@@ -63,7 +63,7 @@
                 <li>7.0 - Nougat</li>
                 <li>8.0 - Oreo</li>
                 <li>9.0 - Pie</li>
-            </ol>
+            </ul>
               <p>Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
               <p>Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
         </section>
